Details
-
Bug
-
Resolution: Done
-
P2: Important
-
4.5.3, 4.6.0, 4.6.1
-
None
-
Carbon
-
08ec00c081ce51a924c65df3998657174f9428b6
Description
Showing a modal dialog repetitively in a QDialog can produce artifacs upon the second show and onwards.
This seems to be only reproducible on Snow Leopard, and only using Carbon.
Deleting and recreating the dialog works around the issue.