Reusing sheets on Mac OS X 10.5 & above shows painting artifacts.

Window modal dialogs are shown as sheets on Mac, reusing them is showing
some painting artificats. So make sure we create a new window everytime
a sheet is shown. This only applies to Carbon, the Cocoa versions dont
have this problem.

Task-number: QTBUG-8198
Reviewed-by: MortenS
(cherry picked from commit 08ec00c081ce51a924c65df3998657174f9428b6)